# IRCBookFinder

./: CMakeLists.txt  README.md
inc/: filehelper.h  irchelper.h  mainwindow.h
src/: filehelper.cpp  irchelper.cpp  main.cpp  mainwindow.cpp
